<resources>
    <string name="app_name">Sharchive</string>
    <string name="home_screen_t1">First, type in or paste a URL.</string>
    <string name="home_screen_t2">Then, select an archive site.</string>
    <string name="home_screen_t3">Hint: you can also open pages by sharing a URL to this app from the share menu.</string>
    <string name="archive_org">Archive.org</string>
    <string name="archive_is">Archive.is</string>
    <string name="google_web_cache">Google Web Cache</string>
    <string name="archive_org_preserve">Add to Archive.org</string>
    <string name="url">URL</string>
    <string name="no_url">Please enter a URL</string>
    <string name="not_a_url">Not a URL</string>
</resources>
